# logscope

./: .gitignore  README.md  pyproject.toml
examples/example1/: parsetab.py
examples/example3-sacsvt-2022/: parsetab.py  script.py
lsm/: ast.py  event_list.py  lsm.py  parser.py  parsetab.py  unittest.py
ply/: lex.py  yacc.py
